--- a/web/pagar.html
+++ b/web/pagar.html
@@ -73,98 +73,72 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">Registro de pedidos</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Carro <i class="fa fa-chevron-right"></i></span></p>
-                    <p>Hey! Echa un vistazo a los pedidos que has realizado hasta el momento.</p>
-					<p>Si tu pedido ya está listo, ¡finaliza aquí tu compra!</p>
+					<h1 class="mb-2 bread">Paga tu Compra</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal<span class="mr-2"><i class="fa fa-chevron-right"></i><a href="carro.html">Carro <i class="fa fa-chevron-right"></i></a></span> <span>Pagar <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
 	</section>
 
     <br>
-    <section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
+    <section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">  
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-xs-8 col-md-10 col-lg-10">
-                    <div class="panel panel-info">
+                <div class="col-xs-12 col-md-4">
+                    <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class="panel-title">
-                                <div class="row">
-                                    <div class="col-xs-6 col-md-9">
-                                        <h4><span class="glyphicon glyphicon-shopping-cart"></span> Carro de la compra</h4>
-                                    </div>
-                                    <div class="col-xs-6 col-md-3">
-                                        <a href="carta.html">
-                                            <span class="glyphicon glyphicon-share-alt"></span> Continuar comprando
-                                        </button></a>
-                                    </div>
-                                </div>
-                            </div>
+                            <h3 class="panel-title">
+                                Detalles de pago
+                            </h3>
                         </div>
-                        <br>
                         <div class="panel-body">
+                            <form role="form">
+                            <div class="form-group">
+                                <label for="cardNumber">
+                                    NÚMERO DE TARJETA</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="cardNumber" placeholder="Nº de Tarjeta Válido"
+                                        required autofocus />
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                                </div>
+                            </div>
                             <div class="row">
-                                <div class="col-xs-2 col-md-3"><img class="img-responsive" src="images/breakfast-3.jpg">
-                                </div>
-                                <div class="col-xs-4 col-md-4">
-                                    <h3 class="product-name"><strong>Bol de Frutas</strong></h3>
-                                </div>
-                                <div class="col-xs-6 col-md-5">
-                                    <div class="col-xs-6 text-right">
-                                        <h4><strong>25.00 <span class="text-muted">x</span></strong></h4>
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <input type="text" class="form-control input-sm" value="1">
-                                    </div>
-                                    <div class="col-xs-2">
-                                        <button type="button" class="btn btn-link btn-lg">
-                                            <span class="glyphicon glyphicon-trash"> </span>
-                                        </button>
+                                <div class="col-xs-7 col-md-7">
+                                    <div class="form-group">
+                                        <label for="expityMonth">
+                                            CADUCIDAD</label>
+                                        <div class="col-xs-6 col-lg-6 pl-ziro">
+                                            <input type="text" class="form-control" id="expityMonth" placeholder="MM" required />
+                                        </div>
+                                        <div class="col-xs-6 col-lg-6 pl-ziro">
+                                            <input type="text" class="form-control" id="expityYear" placeholder="AA" required /></div>
                                     </div>
                                 </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-xs-2 col-md-3"><img class="img-responsive" src="images/lunch-7.jpg">
-                                </div>
-                                <div class="col-xs-4 col-md-4">
-                                    <h3 class="product-name"><strong>Pollo asado</strong></h3>
-                                </div>
-                                <div class="col-xs-6 col-md-5">
-                                    <div class="col-xs-6 text-right">
-                                        <h4><strong>25.00 <span class="text-muted">x</span></strong></h4>
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <input type="text" class="form-control input-sm" value="1">
-                                    </div>
-                                    <div class="col-xs-2">
-                                        <button type="button" class="btn btn-link btn-lg">
-                                            <span class="glyphicon glyphicon-trash"> </span>
-                                        </button>
+                                <div class="col-xs-5 col-md-5 pull-right">
+                                    <div class="form-group">
+                                        <label for="cvCode">
+                                            CÓDIGO</label>
+                                        <input type="password" class="form-control" id="cvCode" placeholder="CV" required />
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="panel-footer">
-                            <div class="row text-center">
-                                <div class="col-xs-9 col-md-8">
-                                    <h4 class="text-right">Total <strong>50.00€</strong></h4>
-                                </div>
-                                <div class="col-xs-3 col-md-4">
-                                    <a href="pagar.html">
-                                    <button type="button" class="btn btn-primary btn-block btn-lg">
-                                        Pagar
-                                    </button>
-                                    </a>
-                                </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
+                   <!-- <ul class="nav nav-pills nav-stacked">
+                        <li class="active"><span class="badge pull-right"><span class="glyphicon glyphicon-usd"></span>4200</span> Final Payment
+                        </li>
+                    </ul>-->
+                    <div class="col-xs-9 col-md-8">
+                        <h4 class="text-right">Total a pagar: <strong>50.00€</strong></h4>
+                    </div>
+                    <br>
+                    <a href="#" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
                 </div>
             </div>
         </div>
-    </section>
+    </section>  
+
     <br>
     
 	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
